assets/preset1_hart.css
/* Table of contents
––––––––––––––––––––––––––––––––––––––––––––––––––
- Plotly.js
- Grid
- Base Styles
- Typography
- Links
- Buttons
- Forms
- Lists
- Code
- Tables
- Spacing
- Utilities
- Clearing
- Media Queries
*/

/* PLotly.js 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/* plotly.js's modebar's z-index is 1001 by default
 * https://github.com/plotly/plotly.js/blob/7e4d8ab164258f6bd48be56589dacd9bdd7fded2/src/css/_modebar.scss#L5
 * In case a dropdown is above the graph, the dropdown's options
 * will be rendered below the modebar
 * Increase the select option's z-index
 */

/* This was actually not quite right -
   dropdowns were overlapping each other (edited October 26)
.Select {
    z-index: 1002;
}*/


/* Grid
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.container {
  position: relative;
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
  box-sizing: border-box; }
.column,
.columns {
  width: 100%;
  float: left;
  box-sizing: border-box; }

/* Banner
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.banner {
    height: 75px;
    margin: 0px -10px 10px;
    border-radius: 2px;
}

.banner h2{
    /* color: white;*/
    padding-top: 10px;
    margin-left: 2%;
    display: inline-block;
}

.banner Img{
    position: relative;
    float: right;
    right: 10px;
    height: 80px;
    padding-bottom: 40px;
}

/* Sidebar
–––––––––––––––––––––––––––––––––––––––––––––––––– */


.sidebar {
  display: block;
  width: 16.5%; 
  display: inline-block;
  position: relative;
  background-color: #fffced !important;
}

.menuBox {
  font-family: 'proxima_nova_rgregular';
  font-size: 15px;
  color: #0B4952;
  padding-bottom: 15pt;
  padding-left: 0.5%;
  position: fixed;
  top: 20px;
}

.menuItems {
  padding-bottom: 20pt;
}

.menuTexts {
  color: #0B4952;
}

/* Dashboard
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* <div class="dashboardWrapper" style="position: relative;">
<embed style="border: none;" src="https://hartdashboard-kook-lgeo.koyeb.app/page2" dpi="300" width="100%" height="3200vh">
</div> */


.background-lgeo {
  width: 90%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;
  padding-bottom: 2%;
  overflow: hidden;
}

/* @media (max-width: 900px) {
  .background-pg2-lgeo  {
    width: 90%;
    height: 1100px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
    overflow: hidden;
  }
}


@media (min-width: 900px) {
  .background-pg2-lgeo  {
    width: 90%;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
  }
} */



.background-pg2-lgeo {
  width: 100%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;
  /* overflow: hidden; */
}

.background-pg3-lgeo {
  width: 100%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;
  /* overflow: hidden; */
}

/* @media (max-width: 1000px) {
  .background-pg3-lgeo  {
    width: 90%;
    height: 1800px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
    overflow: hidden;
  }
}


@media (min-width: 1000px) {
  .background-pg3-lgeo  {
    width: 90%;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
  }
} */



.dashboard-pg1-lgeo {
  width: 90%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;
  padding-bottom: 2%;

  /*border-left-style: solid;
  border-left-color: #4A8F97;
  border-left-width: 1pt; */
  /* background-color: #F3F4F5; */

}

.dashboard-lgeo {
  width: 100%;
  display: inline-block;
  padding-left: 2%;
  padding-right: 2%;

  /*border-left-style: solid;
  border-left-color: #4A8F97;
  border-left-width: 1pt; */
  /* background-color: #F3F4F5; */
}



@media (max-width: 1000px) {
  .dashboard-pg2-lgeo  {
    width: 1000px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
    /* transform:scale(0.28); */
    /* transform-origin: left top; */
    /* margin-bottom:-2000px;
    margin-right:-100px; */
  }
}


@media (min-width: 1000px) {
  .dashboard-pg2-lgeo  {
    width: 1200px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
  }
}

@media (max-width: 1000px) {
  .dashboard-pg3-lgeo  {
    width: 1000px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
    /* transform:scale(0.28); */
    /* transform-origin: left top; */
    /* margin-bottom:-2000px;
    margin-right:-100px; */
  }
}


@media (min-width: 1000px) {
  .dashboard-pg3-lgeo  {
    width: 1100px;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
  }
}


.dropdown-box-lgeo {
  /* width: 70%; */
  display: inline;
  /* padding-right: 30px;
  padding-bottom: 10px;
  padding-top: 20px;
  */
}

.dropdown-lgeo {
  width: 400px;
  display: inline-block;
  padding-right: 30px;
  padding-bottom: 10px;
  padding-top: 20px;
}

/* .scale-buttons-lgeo {
  width: 100%;
  display: inline;
  padding-bottom: 5px;
  padding-top: 5px;

} */

.scale-button-box-lgeo {
  /* width: 100%; */
  display: block;
  padding-bottom: 5px;
  padding-top: 5px;
  float: left;

}

.region-button-box-lgeo {
  /* width: 280px; */
  display: inline-block;
  padding-right: 10px;
  padding-top: 1%;
}

.region-button-lgeo {
  width: 270px;
  /* display: inline-block;
  padding-right: 10px;
  padding-top: 1%; */
}


.reset-button-lgeo {
  /* width: 100%; */
  display: block;
  /* padding-bottom: 20px; */
  padding-top: 10px;

}




.map-lgeo {
  /* width: 100%;  */
  display: inline;
}

.map-area-box-lgeo {
  display: inline-block;

}

@media (max-width: 500px) {
  .map-area-box-lgeo  {
    width: 300px;
    height: 100px;
    display: inline-block;
  }

  .dropdown-lgeo {
    width: 330px;
    display: inline-block;
    padding-right: 30px;
    padding-bottom: 10px;
    padding-top: 20px;
  }
}
/* ... */

